--- a/src/main/resources/com/scanner/standalone/fxml/applications.fxml
+++ b/src/main/resources/com/scanner/standalone/fxml/applications.fxml
@@ -30,7 +30,7 @@
                <children>
                   <Text fill="#cccccc" layoutX="497.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Installed Applications" textAlignment="CENTER">
                      <font>
-                        <Font name="System Bold" size="48.0" />
+                        <Font name="Georgia Bold" size="48.0" />
                      </font>
                   </Text>
                </children>
@@ -42,43 +42,43 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                      <content>
-                        <VBox id="full-right-scan" fx:id="pane11" alignment="CENTER" styleClass="frame">
+                        <VBox id="full-right-scan" fx:id="pane11" alignment="CENTER" prefHeight="74.0" prefWidth="1665.0" styleClass="frame">
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                            <children>
                               <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="46.0" prefWidth="1643.0" spacing="150.0" VBox.vgrow="ALWAYS">
                                  <VBox.margin>
-                                    <Insets bottom="30.0" />
+                                    <Insets bottom="10.0" />
                                  </VBox.margin>
                                  <children>
-                                    <Label prefHeight="36.0" prefWidth="218.0" style="-fx-text-fill: #cccccc;" text="Application Name" HBox.hgrow="ALWAYS">
+                                    <Label prefHeight="36.0" prefWidth="266.0" style="-fx-text-fill: #cccccc;" text="Application Name" HBox.hgrow="ALWAYS">
                                        <font>
-                                          <Font name="System Bold" size="25.0" />
+                                          <Font name="Georgia Bold" size="20.0" />
                                        </font>
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="43.0" prefWidth="238.0" style="-fx-text-fill: #cccccc;" text="Application Version" HBox.hgrow="ALWAYS">
+                                    <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="43.0" prefWidth="266.0" style="-fx-text-fill: #cccccc;" text="Application Version" HBox.hgrow="ALWAYS">
                                        <font>
-                                          <Font name="System Bold" size="25.0" />
+                                          <Font name="Georgia Bold" size="20.0" />
                                        </font>
                                        <HBox.margin>
                                           <Insets left="100.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <Label prefHeight="36.0" prefWidth="169.0" style="-fx-text-fill: #cccccc;" text="Installed Date">
+                                    <Label prefHeight="36.0" prefWidth="235.0" style="-fx-text-fill: #cccccc;" text="Installed Date">
                                        <font>
-                                          <Font name="System Bold" size="25.0" />
+                                          <Font name="Georgia Bold" size="20.0" />
                                        </font>
                                        <HBox.margin>
                                           <Insets />
                                        </HBox.margin>
                                     </Label>
-                                    <Label prefHeight="36.0" prefWidth="81.0" style="-fx-text-fill: #cccccc;" text="Action">
+                                    <Label prefHeight="36.0" prefWidth="138.0" style="-fx-text-fill: #cccccc;" text="Action">
                                        <font>
-                                          <Font name="System Bold" size="25.0" />
+                                          <Font name="Georgia Bold" size="20.0" />
                                        </font>
                                        <HBox.margin>
                                           <Insets />
@@ -86,7 +86,7 @@
                                     </Label>
                                  </children>
                                  <padding>
-                                    <Insets right="300.0" />
+                                    <Insets left="50.0" right="350.0" />
                                  </padding>
                               </HBox>
                            </children>
@@ -110,14 +110,14 @@
             <Pane prefHeight="234.0" prefWidth="266.0">
                <children>
                   <FontAwesomeIconView fill="#c8bcf6" glyphName="HOME" layoutX="23.0" layoutY="102.0" size="90" text="" wrappingWidth="72.0" />
-                  <Label layoutX="116.0" layoutY="24.0" prefHeight="47.0" prefWidth="72.0" text="WVS" textFill="WHITE">
+                  <Label layoutX="116.0" layoutY="24.0" prefHeight="47.0" prefWidth="89.0" text="WVS" textFill="WHITE">
                      <font>
-                        <Font name="Gill Sans MT Bold" size="27.0" />
+                        <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
                   <Label graphicTextGap="9.0" layoutX="112.0" layoutY="70.0" prefHeight="37.0" prefWidth="89.0" text="Feel  Safe" textFill="WHITE">
                      <font>
-                        <Font name="MS Outlook" size="14.0" />
+                        <Font name="Georgia" size="20.0" />
                      </font>
                   </Label>
                   <TextField layoutX="30.0" layoutY="159.0" prefHeight="37.0" prefWidth="172.0" promptText="      search ........." style="-fx-background-color: #ffffff; -fx-border-radius: 50;">
@@ -142,7 +142,7 @@
                   </FontAwesomeIconView>
                </graphic>
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="Georgia Bold" size="15.0" />
                </font>
             </Button>
             <Button fx:id="inventoryButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="273.0" styleClass="hover-button" stylesheets="@../styles/side_bar.css" text="INVENTORY" textFill="WHITE">
@@ -157,7 +157,7 @@
                   </FontAwesomeIconView>
                </graphic>
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Georgia Bold" size="15.0" />
                </font>
             </Button>
             <Button fx:id="analyticsButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="71.0" mnemonicParsing="false" onMouseClicked="#switchToHistory" prefHeight="61.0" prefWidth="279.0" styleClass="hover-button" stylesheets="@../styles/side_bar.css" text="ANALYTICS" textFill="WHITE">
@@ -172,7 +172,7 @@
                   </FontAwesomeIconView>
                </graphic>
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="Georgia Bold" size="15.0" />
                </font>
             </Button>
          </children>
